--- a/index.html
+++ b/index.html
@@ -399,19 +399,20 @@
             </div>
 
             <!-- Day 4 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 4</div>
-                <h3 class="day-title">Coming Soon</h3>
+                <h3 class="day-title">HTML & Git Hands-On</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>CSS Styling</li>
-                        <li>Making Things Look Cool</li>
-                        <li>Interactive Elements</li>
+                        <li>Creating HTML from scratch</li>
+                        <li>GitHub account setup</li>
+                        <li>Git commands (fork, clone, commit)</li>
+                        <li>Opening Pull Requests</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
+                    <a href="day 4/day4_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
 
@@ -516,6 +517,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">HTML</div>
                         <div class="vocab-definition">HyperText Markup Language - The standard language for creating web pages. It uses tags to tell the browser what each part of the page is: headings, paragraphs, images, links, etc.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-4">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-4')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 4: HTML & Git Hands-On
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Open Source</div>
+                        <div class="vocab-definition">Software with source code that anyone can inspect, modify, and share. It's like a recipe that everyone can see, improve, and use for free! Examples include Linux, Firefox, Android, and VS Code.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Git</div>
+                        <div class="vocab-definition">A version control system that tracks changes in your code. Think of it like a super-powered "undo" button that remembers every change you've ever made to your files. Git is the tool, while GitHub is a website that uses Git.</div>
                     </div>
                 </div>
             </div>
