--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
             <!-- Day 4 -->
             <div class="day-card completed">
                 <div class="day-number">Day 4</div>
-                <h3 class="day-title">HTML & Git Hands-On</h3>
+                <h3 class="day-title">HTML Basics (Part 1)</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Creating HTML from scratch</li>
-                        <li>GitHub account setup</li>
-                        <li>Git commands (fork, clone, commit)</li>
-                        <li>Opening Pull Requests</li>
+                        <li>Creating folders and files</li>
+                        <li>Writing HTML from scratch</li>
+                        <li>Basic HTML structure</li>
+                        <li>Testing webpages locally</li>
                     </ul>
                 </div>
                 <div class="materials-section">
@@ -419,12 +419,31 @@
             <!-- Day 5 -->
             <div class="day-card upcoming">
                 <div class="day-number">Day 5</div>
-                <h3 class="day-title">Coming Soon</h3>
+                <h3 class="day-title">Git & GitHub (Part 2)</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Introduction to Python</li>
+                        <li>GitHub account setup</li>
+                        <li>Forking repositories</li>
+                        <li>Git commands (clone, add, commit, push)</li>
+                        <li>Creating Pull Requests</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <span style="color: #999;">Coming next class</span>
+                </div>
+            </div>
+
+            <!-- Day 6 -->
+            <div class="day-card upcoming">
+                <div class="day-number">Day 6</div>
+                <h3 class="day-title">Introduction to Python</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Python basics</li>
                         <li>AI-Assisted Coding</li>
                         <li>Hello World & Beyond</li>
+                        <li>Variables and data types</li>
                     </ul>
                 </div>
                 <div class="materials-section">
@@ -433,15 +452,43 @@
                 </div>
             </div>
 
-            <!-- Day 6 -->
+            <!-- Day 7 -->
             <div class="day-card upcoming">
-                <div class="day-number">Day 6</div>
+                <div class="day-number">Day 7</div>
                 <h3 class="day-title">Coming Soon</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>AI & Machine Learning</li>
-                        <li>Training Your First Model</li>
-                        <li>Ethics in AI</li>
+                        <li>Coming Soon</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <span style="color: #999;">Not yet available</span>
+                </div>
+            </div>
+
+            <!-- Day 8 -->
+            <div class="day-card upcoming">
+                <div class="day-number">Day 8</div>
+                <h3 class="day-title">Coming Soon</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Coming Soon</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <span style="color: #999;">Not yet available</span>
+                </div>
+            </div>
+
+            <!-- Day 9 -->
+            <div class="day-card upcoming">
+                <div class="day-number">Day 9</div>
+                <h3 class="day-title">Coming Soon</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Coming Soon</li>
                     </ul>
                 </div>
                 <div class="materials-section">
