--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
                 <p>GitHub Repository: <code>jeremy-pants</code></p>
             </div>
             <div class="fun-fact">
-                "The best time to plant a tree was 20 years ago. The second best time is now." 
-                <br>- Ancient proverb (also applies to learning to code)
+                "There are only 10 types of people: those who understand binary and those who don't." 
             </div>
         </header>
 
