I forgot about string cheese

--- a/students/landon cope/landon.html
+++ b/students/landon cope/landon.html
@@ -13,6 +13,7 @@
 <li>HTML</li>
 <li>Git and GitHub</li>
 <li>Binary (remember the cats?)</li>
+<li>I like string cheese</li>
 </ul>
 </body>
 </html>
