--- a/students/landon cope/landon.html
+++ b/students/landon cope/landon.html
@@ -14,6 +14,7 @@
 <li>Git and GitHub</li>
 <li>Binary (remember the cats?)</li>
 <li>I like string cheese</li>
+<li>I have a dog named Archie</li>
 </ul>
 </body>
 </html>
