--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <h1>🖥️ Exploring Computer Science</h1>
             <p class="subtitle">Brother Cope's Class Materials</p>
             <div class="repo-info">
-                <p>GitHub Repository: <code>jeremy-pants</code></p>
+                <p>GitHub Repository: <a href="https://github.com/landoncope/jeremy-pants" target="_blank" style="text-decoration: none;"><code>jeremy-pants</code></a></p>
             </div>
             <div class="fun-fact">
                 "There are only 10 types of people: those who understand binary and those who don't." 
@@ -416,26 +416,44 @@
             </div>
 
             <!-- Day 5 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 5</div>
-                <h3 class="day-title">Git & GitHub (Part 2)</h3>
+                <h3 class="day-title">Git & GitHub</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>GitHub account setup</li>
-                        <li>Forking repositories</li>
-                        <li>Git commands (clone, add, commit, push)</li>
-                        <li>Creating Pull Requests</li>
+                        <li>Git basics & commands</li>
+                        <li>Windows command line</li>
+                        <li>GitHub Desktop intro</li>
+                        <li>Creating & contributing webpages</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Coming next class</span>
+                    <a href="day 5/day5_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
 
             <!-- Day 6 -->
             <div class="day-card upcoming">
                 <div class="day-number">Day 6</div>
+                <h3 class="day-title">Spreadsheet Basics</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Introduction to spreadsheets</li>
+                        <li>Formulas and functions</li>
+                        <li>Data organization</li>
+                        <li>Real-world applications</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <span style="color: #999;">Not yet available</span>
+                </div>
+            </div>
+
+            <!-- Day 7 -->
+            <div class="day-card upcoming">
+                <div class="day-number">Day 7</div>
                 <h3 class="day-title">Introduction to Python</h3>
                 <div class="day-topics">
                     <ul>
@@ -451,28 +469,16 @@
                 </div>
             </div>
 
-            <!-- Day 7 -->
-            <div class="day-card upcoming">
-                <div class="day-number">Day 7</div>
-                <h3 class="day-title">Coming Soon</h3>
-                <div class="day-topics">
-                    <ul>
-                        <li>Coming Soon</li>
-                    </ul>
-                </div>
-                <div class="materials-section">
-                    <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
-                </div>
-            </div>
-
             <!-- Day 8 -->
             <div class="day-card upcoming">
                 <div class="day-number">Day 8</div>
-                <h3 class="day-title">Coming Soon</h3>
+                <h3 class="day-title">Python: Control Flow</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Coming Soon</li>
+                        <li>If/else statements</li>
+                        <li>Loops and iteration</li>
+                        <li>Functions</li>
+                        <li>Problem solving</li>
                     </ul>
                 </div>
                 <div class="materials-section">
@@ -484,10 +490,13 @@
             <!-- Day 9 -->
             <div class="day-card upcoming">
                 <div class="day-number">Day 9</div>
-                <h3 class="day-title">Coming Soon</h3>
+                <h3 class="day-title">Python: Lists & Projects</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Coming Soon</li>
+                        <li>Lists and data structures</li>
+                        <li>File handling</li>
+                        <li>Mini projects</li>
+                        <li>Debugging with AI</li>
                     </ul>
                 </div>
                 <div class="materials-section">
@@ -570,16 +579,29 @@
             <div class="vocab-day collapsed" id="vocab-day-4">
                 <div class="vocab-day-title" onclick="toggleVocab('vocab-day-4')">
                     <span class="vocab-toggle">▼</span>
-                    Day 4: HTML & Git Hands-On
+                    Day 4: HTML Basics
                 </div>
                 <div class="vocab-content">
                     <div class="vocab-term-item">
                         <div class="vocab-term">Open Source</div>
                         <div class="vocab-definition">Software with source code that anyone can inspect, modify, and share. It's like a recipe that everyone can see, improve, and use for free! Examples include Linux, Firefox, Android, and VS Code.</div>
                     </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-5">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-5')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 5: Git & GitHub
+                </div>
+                <div class="vocab-content">
                     <div class="vocab-term-item">
                         <div class="vocab-term">Git</div>
-                        <div class="vocab-definition">A version control system that tracks changes in your code. Think of it like a super-powered "undo" button that remembers every change you've ever made to your files. Git is the tool, while GitHub is a website that uses Git.</div>
+                        <div class="vocab-definition">A version control system that tracks changes to your files over time. Think of it like Google Docs' version history, but for code! It lets you save snapshots of your work and collaborate with others.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Tag (HTML)</div>
+                        <div class="vocab-definition">A piece of code that tells the browser how to display content. Tags usually come in pairs with an opening tag like &lt;p&gt; and a closing tag like &lt;/p&gt;. They're like instructions that wrap around your content.</div>
                     </div>
                 </div>
             </div>
