--- a/index.html
+++ b/index.html
@@ -434,33 +434,34 @@
             </div>
 
             <!-- Day 6 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 6</div>
-                <h3 class="day-title">Spreadsheet Basics</h3>
+                <h3 class="day-title">Spreadsheets</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Introduction to spreadsheets</li>
-                        <li>Formulas and functions</li>
-                        <li>Data organization</li>
+                        <li>Why spreadsheets matter</li>
+                        <li>Excel vs Google Sheets</li>
+                        <li>Basic formulas & functions</li>
+                        <li>Cell references</li>
                         <li>Real-world applications</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
+                    <a href="day 6/day6_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
 
             <!-- Day 7 -->
             <div class="day-card upcoming">
                 <div class="day-number">Day 7</div>
-                <h3 class="day-title">Introduction to Python</h3>
+                <h3 class="day-title">Advanced Spreadsheets</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Python basics</li>
-                        <li>AI-Assisted Coding</li>
-                        <li>Hello World & Beyond</li>
-                        <li>Variables and data types</li>
+                        <li>VLOOKUP function</li>
+                        <li>Advanced formulas</li>
+                        <li>Data organization</li>
+                        <li>Spreadsheet project</li>
                     </ul>
                 </div>
                 <div class="materials-section">
@@ -602,6 +603,35 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Tag (HTML)</div>
                         <div class="vocab-definition">A piece of code that tells the browser how to display content. Tags usually come in pairs with an opening tag like &lt;p&gt; and a closing tag like &lt;/p&gt;. They're like instructions that wrap around your content.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-6">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-6')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 6: Spreadsheets
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Cell</div>
+                        <div class="vocab-definition">A single box in a spreadsheet where data lives. Like a parking spot for one piece of information. Named by column letter and row number (A1, B2, etc.)</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Formula</div>
+                        <div class="vocab-definition">A calculation that starts with = sign. Like giving the spreadsheet math homework that it solves instantly. Example: =A1+B1</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Function</div>
+                        <div class="vocab-definition">A pre-built formula that does common tasks. Like shortcuts on your phone - instead of typing a whole address, you just tap "Home". Example: =SUM(A1:A10)</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Range</div>
+                        <div class="vocab-definition">A group of cells selected together. Like highlighting multiple messages to delete at once. Written as A1:B5 (from top-left to bottom-right)</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Cell Reference</div>
+                        <div class="vocab-definition">Using a cell's address in a formula. Like tagging a friend in a post - you're pointing to their content. When you type =A1*2, you're referencing cell A1</div>
                     </div>
                 </div>
             </div>
