--- a/students/UjinChoi/Ujin.html
+++ b/students/UjinChoi/Ujin.html
@@ -10,7 +10,7 @@
 <p>My favorite hobby is sleep, because i don't want to move at all.</p>
 <h2>What I'm Learning</h2>
 <ul>
-<li>Make my own webpages to get more knowledge about computer</li>
+<li>I love noodles</li>
 <li>Be smarter</li>
 <li>Learn how GitHub works</li>
 </ul>
