Add Student Gallery page to showcase all student websites

--- a/index.html
+++ b/index.html
@@ -660,6 +660,10 @@
                     <div class="resource-icon">🎓</div>
                     <div>Schoology</div>
                 </a>
+                <a href="student-gallery.html" class="resource-item">
+                    <div class="resource-icon">🎨</div>
+                    <div>Student Gallery</div>
+                </a>
             </div>
         </div>
 
