--- a/index.html
+++ b/index.html
@@ -453,20 +453,20 @@
             </div>
 
             <!-- Day 7 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 7</div>
-                <h3 class="day-title">Advanced Spreadsheets</h3>
+                <h3 class="day-title">More Spreadsheets</h3>
                 <div class="day-topics">
                     <ul>
+                        <li>ROUND, IF, LEN, LEFT formulas</li>
                         <li>VLOOKUP function</li>
-                        <li>Advanced formulas</li>
-                        <li>Data organization</li>
-                        <li>Spreadsheet project</li>
+                        <li>Formula combinations</li>
+                        <li>Google Sheets assignment</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
+                    <a href="day 7/day7_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
 
