--- a/index.html
+++ b/index.html
@@ -471,20 +471,20 @@
             </div>
 
             <!-- Day 8 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 8</div>
-                <h3 class="day-title">Python: Control Flow</h3>
+                <h3 class="day-title">Spreadsheet Project</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>If/else statements</li>
-                        <li>Loops and iteration</li>
-                        <li>Functions</li>
-                        <li>Problem solving</li>
+                        <li>Spreadsheet review</li>
+                        <li>VLOOKUP practice</li>
+                        <li>IF statements</li>
+                        <li>Field Trip Budget assignment</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
+                    <a href="day 8/day8_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
 
