Fix student html pages

--- a/student-gallery.html
+++ b/student-gallery.html
@@ -210,7 +210,7 @@
                     <span class="emoji">🎯</span>Ally Rees
                 </h3>
                 <div class="student-files">
-                    <a href="students/ally-rees/New Text Document.html" class="file-link" target="_blank">View Website</a>
+                    <a href="students/ally-rees/New%20Text%20Document.html" class="file-link" target="_blank">View Website</a>
                 </div>
             </div>
 
@@ -330,7 +330,7 @@
                     <span class="emoji">🎪</span>Lucian Petersen
                 </h3>
                 <div class="student-files">
-                    <a href="students/lucian-petersen/silmy soonder.html" class="file-link" target="_blank">View Website</a>
+                    <a href="students/lucian-petersen/silmy%20soonder.html" class="file-link" target="_blank">View Website</a>
                 </div>
             </div>
 
@@ -370,7 +370,7 @@
                     <span class="emoji">🎸</span>Ryker Trumble
                 </h3>
                 <div class="student-files">
-                    <a href="students/ryker-trumble/My Website.html" class="file-link" target="_blank">View Website</a>
+                    <a href="students/ryker-trumble/My%20Website.html" class="file-link" target="_blank">View Website</a>
                 </div>
             </div>
 
@@ -390,7 +390,7 @@
                     <span class="emoji">🔥</span>Wyatt Blankinship
                 </h3>
                 <div class="student-files">
-                    <a href="students/wyatt-blankinship/!doctype html.html" class="file-link" target="_blank">View Website</a>
+                    <a href="students/wyatt-blankinship/!doctype%20html.html" class="file-link" target="_blank">View Website</a>
                 </div>
             </div>
         </div>
