--- a/students/lucian-petersen/silmy soonder.html
+++ b/students/lucian-petersen/silmy soonder.html
@@ -4,7 +4,7 @@
   <title>About Lucian :D</title>
  <style>
   body {
-    background-image: url('Cool_backround.JPG'); /* Image is in the same folder as your HTML file */
+    background-image: url('Cool_backround.jpg'); /* Image is in the same folder as your HTML file */
 
     background-size: cover;
     background-attachment: fixed;
@@ -33,10 +33,10 @@
     <li>Binary</li>
   </ul>
 	<h2> This Is How I Feel While Coding: <h2>
-<img src="coding.JPG">
+<img src="coding.jpg">
 
 <p> Anyway...<p>
-<img src="194984.JPG">
+<img src="194984.jpg">
 </body>
 </html>
 
